--- a/app/src/main/res/layout/fragment_food_screen.xml
+++ b/app/src/main/res/layout/fragment_food_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="18dp">
+    android:background="@color/green">
 
         <ImageView
             android:id="@+id/backIv"
@@ -35,6 +35,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
                 <TextView
+                    android:id="@+id/tvFoodName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/foodNAme"
@@ -42,6 +43,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvFoodPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/about_this_product"
@@ -109,11 +111,12 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
         <Button
+            android:id="@+id/addToBasketBtn"
             android:layout_width="352dp"
             android:layout_height="75dp"
-            android:backgroundTint="@color/green"
-            android:text="Add To Basket"
-            android:textColor="@color/white"
+            android:text="@string/basket"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
