--- a/app/src/main/res/layout/basket_item.xml
+++ b/app/src/main/res/layout/basket_item.xml
@@ -24,19 +24,20 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/foodNameTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Grilled Beef"
+                android:text="@string/beef"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Spicy grilled beef \n with special seasoning" />
+                android:text="@string/spicy" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="2"
                 android:orientation="horizontal">
 
