--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -79,6 +79,7 @@
         android:layout_width="166dp"
         android:layout_height="39dp"
         android:text="@string/delete"
+        android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/itemCard"
         app:layout_constraintStart_toStartOf="@+id/itemCard"
