--- a/app/src/main/res/menu/nav_bottom.xml
+++ b/app/src/main/res/menu/nav_bottom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeICon"
+        android:id="@+id/homeIcon"
         android:icon="@drawable/home_2"
         android:title="" />
     <item
